Added foreground notification while something is downloading to prevent it from being cancelled by system

--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -2059,4 +2059,5 @@
     <string name="bottom_drop">Bottom Drop</string>
     <string name="start_drop">Start Drop</string>
     <string name="end_drop">End Drop</string>
+    <string name="downloading">Downloading</string>
 </resources>
