--- a/core/resources/src/main/res/values-be/strings.xml
+++ b/core/resources/src/main/res/values-be/strings.xml
@@ -2040,4 +2040,7 @@
     <string name="bottom_drop">Ніжняя кропля</string>
     <string name="start_drop">Пачаць Drop</string>
     <string name="end_drop">End Drop</string>
+    <string name="downloading">Ідзе загрузка</string>
+    <string name="smooth_shapes">Гладкія фігуры</string>
+    <string name="smooth_shapes_sub">Выкарыстоўвайце суперэліпсы замест стандартных круглявых прамавугольнікаў для больш гладкіх і натуральных формаў</string>
 </resources>
