--- a/core/resources/src/main/res/values-ca/strings.xml
+++ b/core/resources/src/main/res/values-ca/strings.xml
@@ -2038,4 +2038,7 @@
     <string name="bottom_drop">Gota inferior</string>
     <string name="start_drop">Inicia Drop</string>
     <string name="end_drop">Finalitza la caiguda</string>
+    <string name="downloading">Descàrrega</string>
+    <string name="smooth_shapes">Formes llises</string>
+    <string name="smooth_shapes_sub">Utilitzeu superel·lipses en lloc de rectangles arrodonits estàndard per obtenir formes més suaus i naturals</string>
 </resources>
