--- a/core/resources/src/main/res/values-da/strings.xml
+++ b/core/resources/src/main/res/values-da/strings.xml
@@ -2038,4 +2038,7 @@
     <string name="bottom_drop">Nederste fald</string>
     <string name="start_drop">Start Drop</string>
     <string name="end_drop">Slut Drop</string>
+    <string name="downloading">Downloader</string>
+    <string name="smooth_shapes">Glatte former</string>
+    <string name="smooth_shapes_sub">Brug superellipser i stedet for standard afrundede rektangler for glattere, mere naturlige former</string>
 </resources>
