--- a/core/resources/src/main/res/values-de/strings.xml
+++ b/core/resources/src/main/res/values-de/strings.xml
@@ -2038,4 +2038,7 @@
     <string name="bottom_drop">Bottom Drop</string>
     <string name="start_drop">Starten Sie Drop</string>
     <string name="end_drop">End Drop</string>
+    <string name="downloading">Herunterladen</string>
+    <string name="smooth_shapes">Glatte Formen</string>
+    <string name="smooth_shapes_sub">Verwenden Sie Superellipsen anstelle der standardmäßigen abgerundeten Rechtecke für glattere, natürlichere Formen</string>
 </resources>
