--- a/core/resources/src/main/res/values-eu/strings.xml
+++ b/core/resources/src/main/res/values-eu/strings.xml
@@ -2038,4 +2038,7 @@
     <string name="bottom_drop">Beheko Tanta</string>
     <string name="start_drop">Hasi Drop</string>
     <string name="end_drop">Amaitu Drop</string>
+    <string name="downloading">Deskargatzen</string>
+    <string name="smooth_shapes">Forma leunak</string>
+    <string name="smooth_shapes_sub">Erabili superelipseak laukizuzen biribilduen ordez forma leunagoak eta naturalagoak lortzeko</string>
 </resources>
