--- a/core/resources/src/main/res/values-fa/strings.xml
+++ b/core/resources/src/main/res/values-fa/strings.xml
@@ -2038,4 +2038,7 @@
     <string name="bottom_drop">افت پایین</string>
     <string name="start_drop">شروع رها کردن</string>
     <string name="end_drop">پایان رها کردن</string>
+    <string name="downloading">در حال دانلود</string>
+    <string name="smooth_shapes">اشکال صاف</string>
+    <string name="smooth_shapes_sub">به جای مستطیل های گرد استاندارد از ابربیضی ها استفاده کنید تا شکل های صاف تر و طبیعی تر داشته باشید</string>
 </resources>
