--- a/core/resources/src/main/res/values-fil/strings.xml
+++ b/core/resources/src/main/res/values-fil/strings.xml
@@ -2038,4 +2038,7 @@
     <string name="bottom_drop">Bottom Drop</string>
     <string name="start_drop">Simulan ang Drop</string>
     <string name="end_drop">End Drop</string>
+    <string name="downloading">Nagda-download</string>
+    <string name="smooth_shapes">Makinis na Hugis</string>
+    <string name="smooth_shapes_sub">Gumamit ng mga superellipse sa halip na mga karaniwang bilugan na parihaba para sa mas makinis, mas natural na mga hugis</string>
 </resources>
