--- a/core/resources/src/main/res/values-hi/strings.xml
+++ b/core/resources/src/main/res/values-hi/strings.xml
@@ -2038,4 +2038,7 @@
     <string name="bottom_drop">नीचे की बूंद</string>
     <string name="start_drop">ड्रॉप प्रारंभ करें</string>
     <string name="end_drop">अंत ड्रॉप</string>
+    <string name="downloading">डाउनलोड</string>
+    <string name="smooth_shapes">चिकनी आकृतियाँ</string>
+    <string name="smooth_shapes_sub">चिकनी, अधिक प्राकृतिक आकृतियों के लिए मानक गोल आयतों के बजाय सुपरलिप्स का उपयोग करें</string>
 </resources>
