--- a/core/resources/src/main/res/values-hu/strings.xml
+++ b/core/resources/src/main/res/values-hu/strings.xml
@@ -2038,4 +2038,7 @@
     <string name="bottom_drop">Alsó csepp</string>
     <string name="start_drop">Start Drop</string>
     <string name="end_drop">Vége csepp</string>
+    <string name="downloading">Letöltés</string>
+    <string name="smooth_shapes">Sima formák</string>
+    <string name="smooth_shapes_sub">Használjon szuperellipszeket a szokásos lekerekített téglalapok helyett a simább, természetesebb formák érdekében</string>
 </resources>
