--- a/core/resources/src/main/res/values-it/strings.xml
+++ b/core/resources/src/main/res/values-it/strings.xml
@@ -14,7 +14,9 @@
   ~
   ~ You should have received a copy of the Apache License
   ~ along with this program.  If not, see <http://www.apache.org/licenses/LICENSE-2.0>.
-  --><resources>
+  -->
+
+<resources>
     <string name="smth_went_wrong">Qualcosa non ha funzionato: %1$s</string>
     <string name="size">Dimensione %1$s</string>
     <string name="loading">Caricamento…</string>
@@ -2037,4 +2039,6 @@
     <string name="start_drop">Inizia a rilasciare</string>
     <string name="end_drop">Fine Goccia</string>
     <string name="downloading">Scaricamento in corso</string>
+    <string name="smooth_shapes">Forme morbide</string>
+    <string name="smooth_shapes_sub">Utilizza le superellissi invece dei rettangoli arrotondati standard per forme più morbide e naturali</string>
 </resources>
