--- a/core/resources/src/main/res/values-ko/strings.xml
+++ b/core/resources/src/main/res/values-ko/strings.xml
@@ -2037,4 +2037,7 @@
     <string name="bottom_drop">하단 드롭</string>
     <string name="start_drop">드롭 시작</string>
     <string name="end_drop">엔드 드롭</string>
+    <string name="downloading">다운로드 중</string>
+    <string name="smooth_shapes">부드러운 모양</string>
+    <string name="smooth_shapes_sub">더 부드럽고 자연스러운 모양을 위해 표준 둥근 직사각형 대신 초타원을 사용하세요.</string>
 </resources>
