--- a/core/resources/src/main/res/values-ro/strings.xml
+++ b/core/resources/src/main/res/values-ro/strings.xml
@@ -14,7 +14,9 @@
   ~
   ~ You should have received a copy of the Apache License
   ~ along with this program.  If not, see <http://www.apache.org/licenses/LICENSE-2.0>.
-  --><resources>
+  -->
+
+<resources>
     <string name="size">Mărime %1$s</string>
     <string name="height">Înălțime %1$s</string>
     <string name="quality">Calitatea</string>
@@ -2037,4 +2039,7 @@
     <string name="bottom_drop">Scădere de jos</string>
     <string name="start_drop">Începeți Drop</string>
     <string name="end_drop">Sfârșește Drop</string>
+    <string name="downloading">Descărcarea</string>
+    <string name="smooth_shapes">Forme netede</string>
+    <string name="smooth_shapes_sub">Folosiți superelipse în loc de dreptunghiuri rotunjite standard pentru forme mai fine și mai naturale</string>
 </resources>
