--- a/core/resources/src/main/res/values-ru/strings.xml
+++ b/core/resources/src/main/res/values-ru/strings.xml
@@ -2040,4 +2040,7 @@
     <string name="bottom_drop">Нижняя капля</string>
     <string name="start_drop">Начать падение</string>
     <string name="end_drop">Конец падения</string>
+    <string name="downloading">Загрузка</string>
+    <string name="smooth_shapes">Гладкие формы</string>
+    <string name="smooth_shapes_sub">Используйте суперэллипсы вместо стандартных закругленных прямоугольников для получения более плавных и естественных форм.</string>
 </resources>
