--- a/core/resources/src/main/res/values-si/strings.xml
+++ b/core/resources/src/main/res/values-si/strings.xml
@@ -14,7 +14,9 @@
   ~
   ~ You should have received a copy of the Apache License
   ~ along with this program.  If not, see <http://www.apache.org/licenses/LICENSE-2.0>.
-  --><resources xmlns:tools="http://schemas.android.com/tools">
+  -->
+
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="smth_went_wrong">ගැටලුවක් පවතී: %1$s</string>
     <string name="size">ප්‍රමාණය %1$s</string>
     <string name="loading">මොහොතක් සිටින්න…</string>
@@ -2037,4 +2039,7 @@
     <string name="bottom_drop">පහළ වැටීම</string>
     <string name="start_drop">වැටීම ආරම්භ කරන්න</string>
     <string name="end_drop">End Drop</string>
+    <string name="downloading">බාගත කිරීම</string>
+    <string name="smooth_shapes">සිනිඳු හැඩතල</string>
+    <string name="smooth_shapes_sub">සිනිඳු, වඩාත් ස්වාභාවික හැඩතල සඳහා සම්මත වටකුරු සෘජුකෝණාස්‍ර වෙනුවට සුපිරි ඉලිප්සාකාර භාවිතා කරන්න</string>
 </resources>
