--- a/core/resources/src/main/res/values-sv/strings.xml
+++ b/core/resources/src/main/res/values-sv/strings.xml
@@ -2039,4 +2039,7 @@
     <string name="bottom_drop">Nedre droppe</string>
     <string name="start_drop">Starta Drop</string>
     <string name="end_drop">Avsluta Drop</string>
+    <string name="downloading">Laddar ner</string>
+    <string name="smooth_shapes">Släta former</string>
+    <string name="smooth_shapes_sub">Använd superellipser istället för vanliga rundade rektanglar för jämnare, mer naturliga former</string>
 </resources>
