--- a/core/resources/src/main/res/values-tr/strings.xml
+++ b/core/resources/src/main/res/values-tr/strings.xml
@@ -14,7 +14,9 @@
   ~
   ~ You should have received a copy of the Apache License
   ~ along with this program.  If not, see <http://www.apache.org/licenses/LICENSE-2.0>.
-  --><resources xmlns:tools="http://schemas.android.com/tools">
+  -->
+
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="smth_went_wrong">Bir şeyler ters gitti: %1$s</string>
     <string name="size">Boyut: %1$s</string>
     <string name="loading">Yükleniyor…</string>
@@ -2037,4 +2039,6 @@
     <string name="start_drop">Bırakmayı Başlat</string>
     <string name="end_drop">Bırakmayı Sonlandır</string>
     <string name="downloading">İndiriliyor</string>
+    <string name="smooth_shapes">Pürüzsüz Şekiller</string>
+    <string name="smooth_shapes_sub">Daha düzgün, daha doğal şekiller için standart yuvarlatılmış dikdörtgenler yerine süper elipsler kullanın</string>
 </resources>
