--- a/core/resources/src/main/res/values-uk/strings.xml
+++ b/core/resources/src/main/res/values-uk/strings.xml
@@ -14,7 +14,9 @@
   ~
   ~ You should have received a copy of the Apache License
   ~ along with this program.  If not, see <http://www.apache.org/licenses/LICENSE-2.0>.
-  --><resources xmlns:tools="http://schemas.android.com/tools">
+  -->
+
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="image_too_large_preview">Зображення завелике для попереднього перегляду, але спроба збереження все одно буде здійснена</string>
     <string name="pick_image">Виберіть зображення для початку</string>
     <string name="resize_type">Тип масштабування</string>
@@ -2039,4 +2041,6 @@
     <string name="start_drop">Почати Drop</string>
     <string name="end_drop">End Drop</string>
     <string name="downloading">Завантажується</string>
+    <string name="smooth_shapes">Плавні фігури</string>
+    <string name="smooth_shapes_sub">Використовуйте супереліпси замість стандартних заокруглених прямокутників для більш гладких і природних форм</string>
 </resources>
